@@ -12,6 +12,7 @@ Version 1.4
 
 - Three fixes to the Lua lexer (#480, #481, #482).
 
+- More context-sensitive Gherkin lexer with support for more i18n translations.
 
 Version 1.3.1
 -------------
